[package]
name = "ash_renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ash = "0.38"
ash-window = "0.13"
bytemuck = { version = "1.25.0", features = ["derive"] }
nalgebra = "0.35.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
winit = "0.30"
log = "0.4.31"
gpu-allocator = { version = "0.28.0", default-features = false, features = ["vulkan", "std"] }
cstr = "0.2.12"
image = "0.25.10"
